editor/editor/parser.out
Created by PLY version 3.4 (http://www.dabeaz.com/ply)

Unused terminals:

    RETURN
    FOR
    IN
    EACH

Grammar

Rule 0     S' -> start
Rule 1     start -> statements
Rule 2     statements -> statement statements
Rule 3     statements -> statement
Rule 4     statement -> expression
Rule 5     statement -> ID ASSIGN expression SEMICOLON
Rule 6     statement -> expression PLUS PLUS SEMICOLON
Rule 7     statement -> expression MINUS MINUS SEMICOLON
Rule 8     expression -> expression PLUS expression
Rule 9     expression -> expression MINUS expression
Rule 10    expression -> expression MULTIPLY expression
Rule 11    expression -> expression DIVIDE expression
Rule 12    expression -> expression POW expression
Rule 13    expression -> expression MOD expression
Rule 14    expression -> expression AND expression
Rule 15    expression -> expression OR expression
Rule 16    expression -> expression XOR expression
Rule 17    expression -> expression EQUALS expression
Rule 18    expression -> expression NOT_EQUALS expression
Rule 19    expression -> expression GREATER_THAN expression
Rule 20    expression -> expression LESS_THAN expression
Rule 21    expression -> expression GREATER_THAN_OR_EQUAL expression
Rule 22    expression -> expression LESS_THAN_OR_EQUAL expression
Rule 23    expression -> NOT expression
Rule 24    expression -> TRUE
Rule 25    expression -> FALSE
Rule 26    expression -> MINUS expression
Rule 27    expression -> PLUS expression
Rule 28    expression -> LPAREN expression RPAREN
Rule 29    expression -> SELECTOR LPAREN elements RPAREN
Rule 30    expression -> NUMBER
Rule 31    expression -> ID
Rule 32    expression -> STRING1
Rule 33    expression -> STRING2
Rule 34    statement -> IF expression DO statements elif_blocks END
Rule 35    elif_blocks -> elif_block elif_blocks
Rule 36    elif_blocks -> else_block
Rule 37    elif_blocks -> <empty>
Rule 38    elif_block -> ELIF expression DO statements
Rule 39    else_block -> ELSE statements
Rule 40    statement -> WHILE expression DO statements END
Rule 41    statement -> ID ASSIGN LBRACKET elements RBRACKET SEMICOLON
Rule 42    elements -> element COMMA elements
Rule 43    elements -> element
Rule 44    element -> expression
Rule 45    expression -> ID LPAREN statement RPAREN SEMICOLON

Terminals, with rules where they appear

AND                  : 14
ASSIGN               : 5 41
COMMA                : 42
DIVIDE               : 11
DO                   : 34 38 40
EACH                 : 
ELIF                 : 38
ELSE                 : 39
END                  : 34 40
EQUALS               : 17
FALSE                : 25
FOR                  : 
GREATER_THAN         : 19
GREATER_THAN_OR_EQUAL : 21
ID                   : 5 31 41 45
IF                   : 34
IN                   : 
LBRACKET             : 41
LESS_THAN            : 20
LESS_THAN_OR_EQUAL   : 22
LPAREN               : 28 29 45
MINUS                : 7 7 9 26
MOD                  : 13
MULTIPLY             : 10
NOT                  : 23
NOT_EQUALS           : 18
NUMBER               : 30
OR                   : 15
PLUS                 : 6 6 8 27
POW                  : 12
RBRACKET             : 41
RETURN               : 
RPAREN               : 28 29 45
SELECTOR             : 29
SEMICOLON            : 5 6 7 41 45
STRING1              : 32
STRING2              : 33
TRUE                 : 24
WHILE                : 40
XOR                  : 16
error                : 

Nonterminals, with rules where they appear

element              : 42 43
elements             : 29 41 42
elif_block           : 35
elif_blocks          : 34 35
else_block           : 36
expression           : 4 5 6 7 8 8 9 9 10 10 11 11 12 12 13 13 14 14 15 15 16 16 17 17 18 18 19 19 20 20 21 21 22 22 23 26 27 28 34 38 40 44
start                : 0
statement            : 2 3 45
statements           : 1 2 34 38 39 40

Parsing method: LALR

state 0

    (0) S' -> . start
    (1) start -> . statements
    (2) statements -> . statement statements
    (3) statements -> . statement
    (4) statement -> . expression
    (5) statement -> . ID ASSIGN expression SEMICOLON
    (6) statement -> . expression PLUS PLUS SEMICOLON
    (7) statement -> . expression MINUS MINUS SEMICOLON
    (34) statement -> . IF expression DO statements elif_blocks END
    (40) statement -> . WHILE expression DO statements END
    (41) statement -> . ID ASSIGN LBRACKET elements RBRACKET SEMICOLON
    (8) expression -> . expression PLUS expression
    (9) expression -> . expression MINUS expression
    (10) expression -> . expression MULTIPLY expression
    (11) expression -> . expression DIVIDE expression
    (12) expression -> . expression POW expression
    (13) expression -> . expression MOD expression
    (14) expression -> . expression AND expression
    (15) expression -> . expression OR expression
    (16) expression -> . expression XOR expression
    (17) expression -> . expression EQUALS expression
    (18) expression -> . expression NOT_EQUALS expression
    (19) expression -> . expression GREATER_THAN expression
    (20) expression -> . expression LESS_THAN expression
    (21) expression -> . expression GREATER_THAN_OR_EQUAL expression
    (22) expression -> . expression LESS_THAN_OR_EQUAL expression
    (23) expression -> . NOT expression
    (24) expression -> . TRUE
    (25) expression -> . FALSE
    (26) expression -> . MINUS expression
    (27) expression -> . PLUS expression
    (28) expression -> . LPAREN expression RPAREN
    (29) expression -> . SELECTOR LPAREN elements RPAREN
    (30) expression -> . NUMBER
    (31) expression -> . ID
    (32) expression -> . STRING1
    (33) expression -> . STRING2
    (45) expression -> . ID LPAREN statement RPAREN SEMICOLON

    ID              shift and go to state 13
    IF              shift and go to state 14
    WHILE           shift and go to state 4
    NOT             shift and go to state 16
    TRUE            shift and go to state 5
    FALSE           shift and go to state 15
    MINUS           shift and go to state 6
    PLUS            shift and go to state 8
    LPAREN          shift and go to state 12
    SELECTOR        shift and go to state 3
    NUMBER          shift and go to state 2
    STRING1         shift and go to state 11
    STRING2         shift and go to state 10

    statements                     shift and go to state 1
    start                          shift and go to state 7
    statement                      shift and go to state 9
    expression                     shift and go to state 17

state 1

    (1) start -> statements .

    $end            reduce using rule 1 (start -> statements .)


state 2

    (30) expression -> NUMBER .

    PLUS            reduce using rule 30 (expression -> NUMBER .)
    MINUS           reduce using rule 30 (expression -> NUMBER .)
    MULTIPLY        reduce using rule 30 (expression -> NUMBER .)
    DIVIDE          reduce using rule 30 (expression -> NUMBER .)
    POW             reduce using rule 30 (expression -> NUMBER .)
    MOD             reduce using rule 30 (expression -> NUMBER .)
    AND             reduce using rule 30 (expression -> NUMBER .)
    OR              reduce using rule 30 (expression -> NUMBER .)
    XOR             reduce using rule 30 (expression -> NUMBER .)
    EQUALS          reduce using rule 30 (expression -> NUMBER .)
    NOT_EQUALS      reduce using rule 30 (expression -> NUMBER .)
    GREATER_THAN    reduce using rule 30 (expression -> NUMBER .)
    LESS_THAN       reduce using rule 30 (expression -> NUMBER .)
    GREATER_THAN_OR_EQUAL reduce using rule 30 (expression -> NUMBER .)
    LESS_THAN_OR_EQUAL reduce using rule 30 (expression -> NUMBER .)
    ID              reduce using rule 30 (expression -> NUMBER .)
    IF              reduce using rule 30 (expression -> NUMBER .)
    WHILE           reduce using rule 30 (expression -> NUMBER .)
    NOT             reduce using rule 30 (expression -> NUMBER .)
    TRUE            reduce using rule 30 (expression -> NUMBER .)
    FALSE           reduce using rule 30 (expression -> NUMBER .)
    LPAREN          reduce using rule 30 (expression -> NUMBER .)
    SELECTOR        reduce using rule 30 (expression -> NUMBER .)
    NUMBER          reduce using rule 30 (expression -> NUMBER .)
    STRING1         reduce using rule 30 (expression -> NUMBER .)
    STRING2         reduce using rule 30 (expression -> NUMBER .)
    $end            reduce using rule 30 (expression -> NUMBER .)
    DO              reduce using rule 30 (expression -> NUMBER .)
    END             reduce using rule 30 (expression -> NUMBER .)
    ELIF            reduce using rule 30 (expression -> NUMBER .)
    ELSE            reduce using rule 30 (expression -> NUMBER .)
    RPAREN          reduce using rule 30 (expression -> NUMBER .)
    COMMA           reduce using rule 30 (expression -> NUMBER .)
    SEMICOLON       reduce using rule 30 (expression -> NUMBER .)
    RBRACKET        reduce using rule 30 (expression -> NUMBER .)


state 3

    (29) expression -> SELECTOR . LPAREN elements RPAREN

    LPAREN          shift and go to state 18


state 4

    (40) statement -> WHILE . expression DO statements END
    (8) expression -> . expression PLUS expression
    (9) expression -> . expression MINUS expression
    (10) expression -> . expression MULTIPLY expression
    (11) expression -> . expression DIVIDE expression
    (12) expression -> . expression POW expression
    (13) expression -> . expression MOD expression
    (14) expression -> . expression AND expression
    (15) expression -> . expression OR expression
    (16) expression -> . expression XOR expression
    (17) expression -> . expression EQUALS expression
    (18) expression -> . expression NOT_EQUALS expression
    (19) expression -> . expression GREATER_THAN expression
    (20) expression -> . expression LESS_THAN expression
    (21) expression -> . expression GREATER_THAN_OR_EQUAL expression
    (22) expression -> . expression LESS_THAN_OR_EQUAL expression
    (23) expression -> . NOT expression
    (24) expression -> . TRUE
    (25) expression -> . FALSE
    (26) expression -> . MINUS expression
    (27) expression -> . PLUS expression
    (28) expression -> . LPAREN expression RPAREN
    (29) expression -> . SELECTOR LPAREN elements RPAREN
    (30) expression -> . NUMBER
    (31) expression -> . ID
    (32) expression -> . STRING1
    (33) expression -> . STRING2
    (45) expression -> . ID LPAREN statement RPAREN SEMICOLON

    NOT             shift and go to state 16
    TRUE            shift and go to state 5
    FALSE           shift and go to state 15
    MINUS           shift and go to state 6
    PLUS            shift and go to state 8
    LPAREN          shift and go to state 12
    SELECTOR        shift and go to state 3
    NUMBER          shift and go to state 2
    ID              shift and go to state 19
    STRING1         shift and go to state 11
    STRING2         shift and go to state 10

    expression                     shift and go to state 20

state 5

    (24) expression -> TRUE .

    PLUS            reduce using rule 24 (expression -> TRUE .)
    MINUS           reduce using rule 24 (expression -> TRUE .)
    MULTIPLY        reduce using rule 24 (expression -> TRUE .)
    DIVIDE          reduce using rule 24 (expression -> TRUE .)
    POW             reduce using rule 24 (expression -> TRUE .)
    MOD             reduce using rule 24 (expression -> TRUE .)
    AND             reduce using rule 24 (expression -> TRUE .)
    OR              reduce using rule 24 (expression -> TRUE .)
    XOR             reduce using rule 24 (expression -> TRUE .)
    EQUALS          reduce using rule 24 (expression -> TRUE .)
    NOT_EQUALS      reduce using rule 24 (expression -> TRUE .)
    GREATER_THAN    reduce using rule 24 (expression -> TRUE .)
    LESS_THAN       reduce using rule 24 (expression -> TRUE .)
    GREATER_THAN_OR_EQUAL reduce using rule 24 (expression -> TRUE .)
    LESS_THAN_OR_EQUAL reduce using rule 24 (expression -> TRUE .)
    ID              reduce using rule 24 (expression -> TRUE .)
    IF              reduce using rule 24 (expression -> TRUE .)
    WHILE           reduce using rule 24 (expression -> TRUE .)
    NOT             reduce using rule 24 (expression -> TRUE .)
    TRUE            reduce using rule 24 (expression -> TRUE .)
    FALSE           reduce using rule 24 (expression -> TRUE .)
    LPAREN          reduce using rule 24 (expression -> TRUE .)
    SELECTOR        reduce using rule 24 (expression -> TRUE .)
    NUMBER          reduce using rule 24 (expression -> TRUE .)
    STRING1         reduce using rule 24 (expression -> TRUE .)
    STRING2         reduce using rule 24 (expression -> TRUE .)
    $end            reduce using rule 24 (expression -> TRUE .)
    DO              reduce using rule 24 (expression -> TRUE .)
    END             reduce using rule 24 (expression -> TRUE .)
    ELIF            reduce using rule 24 (expression -> TRUE .)
    ELSE            reduce using rule 24 (expression -> TRUE .)
    RPAREN          reduce using rule 24 (expression -> TRUE .)
    COMMA           reduce using rule 24 (expression -> TRUE .)
    SEMICOLON       reduce using rule 24 (expression -> TRUE .)
    RBRACKET        reduce using rule 24 (expression -> TRUE .)


state 6

    (26) expression -> MINUS . expression
    (8) expression -> . expression PLUS expression
    (9) expression -> . expression MINUS expression
    (10) expression -> . expression MULTIPLY expression
    (11) expression -> . expression DIVIDE expression
    (12) expression -> . expression POW expression
    (13) expression -> . expression MOD expression
    (14) expression -> . expression AND expression
    (15) expression -> . expression OR expression
    (16) expression -> . expression XOR expression
    (17) expression -> . expression EQUALS expression
    (18) expression -> . expression NOT_EQUALS expression
    (19) expression -> . expression GREATER_THAN expression
    (20) expression -> . expression LESS_THAN expression
    (21) expression -> . expression GREATER_THAN_OR_EQUAL expression
    (22) expression -> . expression LESS_THAN_OR_EQUAL expression
    (23) expression -> . NOT expression
    (24) expression -> . TRUE
    (25) expression -> . FALSE
    (26) expression -> . MINUS expression
    (27) expression -> . PLUS expression
    (28) expression -> . LPAREN expression RPAREN
    (29) expression -> . SELECTOR LPAREN elements RPAREN
    (30) expression -> . NUMBER
    (31) expression -> . ID
    (32) expression -> . STRING1
    (33) expression -> . STRING2
    (45) expression -> . ID LPAREN statement RPAREN SEMICOLON

    NOT             shift and go to state 16
    TRUE            shift and go to state 5
    FALSE           shift and go to state 15
    MINUS           shift and go to state 6
    PLUS            shift and go to state 8
    LPAREN          shift and go to state 12
    SELECTOR        shift and go to state 3
    NUMBER          shift and go to state 2
    ID              shift and go to state 19
    STRING1         shift and go to state 11
    STRING2         shift and go to state 10

    expression                     shift and go to state 21

state 7

    (0) S' -> start .



state 8

    (27) expression -> PLUS . expression
    (8) expression -> . expression PLUS expression
    (9) expression -> . expression MINUS expression
    (10) expression -> . expression MULTIPLY expression
    (11) expression -> . expression DIVIDE expression
    (12) expression -> . expression POW expression
    (13) expression -> . expression MOD expression
    (14) expression -> . expression AND expression
    (15) expression -> . expression OR expression
    (16) expression -> . expression XOR expression
    (17) expression -> . expression EQUALS expression
    (18) expression -> . expression NOT_EQUALS expression
    (19) expression -> . expression GREATER_THAN expression
    (20) expression -> . expression LESS_THAN expression
    (21) expression -> . expression GREATER_THAN_OR_EQUAL expression
    (22) expression -> . expression LESS_THAN_OR_EQUAL expression
    (23) expression -> . NOT expression
    (24) expression -> . TRUE
    (25) expression -> . FALSE
    (26) expression -> . MINUS expression
    (27) expression -> . PLUS expression
    (28) expression -> . LPAREN expression RPAREN
    (29) expression -> . SELECTOR LPAREN elements RPAREN
    (30) expression -> . NUMBER
    (31) expression -> . ID
    (32) expression -> . STRING1
    (33) expression -> . STRING2
    (45) expression -> . ID LPAREN statement RPAREN SEMICOLON

    NOT             shift and go to state 16
    TRUE            shift and go to state 5
    FALSE           shift and go to state 15
    MINUS           shift and go to state 6
    PLUS            shift and go to state 8
    LPAREN          shift and go to state 12
    SELECTOR        shift and go to state 3
    NUMBER          shift and go to state 2
    ID              shift and go to state 19
    STRING1         shift and go to state 11
    STRING2         shift and go to state 10

    expression                     shift and go to state 22

state 9

    (2) statements -> statement . statements
    (3) statements -> statement .
    (2) statements -> . statement statements
    (3) statements -> . statement
    (4) statement -> . expression
    (5) statement -> . ID ASSIGN expression SEMICOLON
    (6) statement -> . expression PLUS PLUS SEMICOLON
    (7) statement -> . expression MINUS MINUS SEMICOLON
    (34) statement -> . IF expression DO statements elif_blocks END
    (40) statement -> . WHILE expression DO statements END
    (41) statement -> . ID ASSIGN LBRACKET elements RBRACKET SEMICOLON
    (8) expression -> . expression PLUS expression
    (9) expression -> . expression MINUS expression
    (10) expression -> . expression MULTIPLY expression
    (11) expression -> . expression DIVIDE expression
    (12) expression -> . expression POW expression
    (13) expression -> . expression MOD expression
    (14) expression -> . expression AND expression
    (15) expression -> . expression OR expression
    (16) expression -> . expression XOR expression
    (17) expression -> . expression EQUALS expression
    (18) expression -> . expression NOT_EQUALS expression
    (19) expression -> . expression GREATER_THAN expression
    (20) expression -> . expression LESS_THAN expression
    (21) expression -> . expression GREATER_THAN_OR_EQUAL expression
    (22) expression -> . expression LESS_THAN_OR_EQUAL expression
    (23) expression -> . NOT expression
    (24) expression -> . TRUE
    (25) expression -> . FALSE
    (26) expression -> . MINUS expression
    (27) expression -> . PLUS expression
    (28) expression -> . LPAREN expression RPAREN
    (29) expression -> . SELECTOR LPAREN elements RPAREN
    (30) expression -> . NUMBER
    (31) expression -> . ID
    (32) expression -> . STRING1
    (33) expression -> . STRING2
    (45) expression -> . ID LPAREN statement RPAREN SEMICOLON

    ELIF            reduce using rule 3 (statements -> statement .)
    ELSE            reduce using rule 3 (statements -> statement .)
    END             reduce using rule 3 (statements -> statement .)
    $end            reduce using rule 3 (statements -> statement .)
    ID              shift and go to state 13
    IF              shift and go to state 14
    WHILE           shift and go to state 4
    NOT             shift and go to state 16
    TRUE            shift and go to state 5
    FALSE           shift and go to state 15
    MINUS           shift and go to state 6
    PLUS            shift and go to state 8
    LPAREN          shift and go to state 12
    SELECTOR        shift and go to state 3
    NUMBER          shift and go to state 2
    STRING1         shift and go to state 11
    STRING2         shift and go to state 10

    expression                     shift and go to state 17
    statements                     shift and go to state 23
    statement                      shift and go to state 9

state 10

    (33) expression -> STRING2 .

    PLUS            reduce using rule 33 (expression -> STRING2 .)
    MINUS           reduce using rule 33 (expression -> STRING2 .)
    MULTIPLY        reduce using rule 33 (expression -> STRING2 .)
    DIVIDE          reduce using rule 33 (expression -> STRING2 .)
    POW             reduce using rule 33 (expression -> STRING2 .)
    MOD             reduce using rule 33 (expression -> STRING2 .)
    AND             reduce using rule 33 (expression -> STRING2 .)
    OR              reduce using rule 33 (expression -> STRING2 .)
    XOR             reduce using rule 33 (expression -> STRING2 .)
    EQUALS          reduce using rule 33 (expression -> STRING2 .)
    NOT_EQUALS      reduce using rule 33 (expression -> STRING2 .)
    GREATER_THAN    reduce using rule 33 (expression -> STRING2 .)
    LESS_THAN       reduce using rule 33 (expression -> STRING2 .)
    GREATER_THAN_OR_EQUAL reduce using rule 33 (expression -> STRING2 .)
    LESS_THAN_OR_EQUAL reduce using rule 33 (expression -> STRING2 .)
    ID              reduce using rule 33 (expression -> STRING2 .)
    IF              reduce using rule 33 (expression -> STRING2 .)
    WHILE           reduce using rule 33 (expression -> STRING2 .)
    NOT             reduce using rule 33 (expression -> STRING2 .)
    TRUE            reduce using rule 33 (expression -> STRING2 .)
    FALSE           reduce using rule 33 (expression -> STRING2 .)
    LPAREN          reduce using rule 33 (expression -> STRING2 .)
    SELECTOR        reduce using rule 33 (expression -> STRING2 .)
    NUMBER          reduce using rule 33 (expression -> STRING2 .)
    STRING1         reduce using rule 33 (expression -> STRING2 .)
    STRING2         reduce using rule 33 (expression -> STRING2 .)
    $end            reduce using rule 33 (expression -> STRING2 .)
    DO              reduce using rule 33 (expression -> STRING2 .)
    END             reduce using rule 33 (expression -> STRING2 .)
    ELIF            reduce using rule 33 (expression -> STRING2 .)
    ELSE            reduce using rule 33 (expression -> STRING2 .)
    RPAREN          reduce using rule 33 (expression -> STRING2 .)
    COMMA           reduce using rule 33 (expression -> STRING2 .)
    SEMICOLON       reduce using rule 33 (expression -> STRING2 .)
    RBRACKET        reduce using rule 33 (expression -> STRING2 .)


state 11

    (32) expression -> STRING1 .

    PLUS            reduce using rule 32 (expression -> STRING1 .)
    MINUS           reduce using rule 32 (expression -> STRING1 .)
    MULTIPLY        reduce using rule 32 (expression -> STRING1 .)
    DIVIDE          reduce using rule 32 (expression -> STRING1 .)
    POW             reduce using rule 32 (expression -> STRING1 .)
    MOD             reduce using rule 32 (expression -> STRING1 .)
    AND             reduce using rule 32 (expression -> STRING1 .)
    OR              reduce using rule 32 (expression -> STRING1 .)
    XOR             reduce using rule 32 (expression -> STRING1 .)
    EQUALS          reduce using rule 32 (expression -> STRING1 .)
    NOT_EQUALS      reduce using rule 32 (expression -> STRING1 .)
    GREATER_THAN    reduce using rule 32 (expression -> STRING1 .)
    LESS_THAN       reduce using rule 32 (expression -> STRING1 .)
    GREATER_THAN_OR_EQUAL reduce using rule 32 (expression -> STRING1 .)
    LESS_THAN_OR_EQUAL reduce using rule 32 (expression -> STRING1 .)
    ID              reduce using rule 32 (expression -> STRING1 .)
    IF              reduce using rule 32 (expression -> STRING1 .)
    WHILE           reduce using rule 32 (expression -> STRING1 .)
    NOT             reduce using rule 32 (expression -> STRING1 .)
    TRUE            reduce using rule 32 (expression -> STRING1 .)
    FALSE           reduce using rule 32 (expression -> STRING1 .)
    LPAREN          reduce using rule 32 (expression -> STRING1 .)
    SELECTOR        reduce using rule 32 (expression -> STRING1 .)
    NUMBER          reduce using rule 32 (expression -> STRING1 .)
    STRING1         reduce using rule 32 (expression -> STRING1 .)
    STRING2         reduce using rule 32 (expression -> STRING1 .)
    $end            reduce using rule 32 (expression -> STRING1 .)
    DO              reduce using rule 32 (expression -> STRING1 .)
    END             reduce using rule 32 (expression -> STRING1 .)
    ELIF            reduce using rule 32 (expression -> STRING1 .)
    ELSE            reduce using rule 32 (expression -> STRING1 .)
    RPAREN          reduce using rule 32 (expression -> STRING1 .)
    COMMA           reduce using rule 32 (expression -> STRING1 .)
    SEMICOLON       reduce using rule 32 (expression -> STRING1 .)
    RBRACKET        reduce using rule 32 (expression -> STRING1 .)


state 12

    (28) expression -> LPAREN . expression RPAREN
    (8) expression -> . expression PLUS expression
    (9) expression -> . expression MINUS expression
    (10) expression -> . expression MULTIPLY expression
    (11) expression -> . expression DIVIDE expression
    (12) expression -> . expression POW expression
    (13) expression -> . expression MOD expression
    (14) expression -> . expression AND expression
    (15) expression -> . expression OR expression
    (16) expression -> . expression XOR expression
    (17) expression -> . expression EQUALS expression
    (18) expression -> . expression NOT_EQUALS expression
    (19) expression -> . expression GREATER_THAN expression
    (20) expression -> . expression LESS_THAN expression
    (21) expression -> . expression GREATER_THAN_OR_EQUAL expression
    (22) expression -> . expression LESS_THAN_OR_EQUAL expression
    (23) expression -> . NOT expression
    (24) expression -> . TRUE
    (25) expression -> . FALSE
    (26) expression -> . MINUS expression
    (27) expression -> . PLUS expression
    (28) expression -> . LPAREN expression RPAREN
    (29) expression -> . SELECTOR LPAREN elements RPAREN
    (30) expression -> . NUMBER
    (31) expression -> . ID
    (32) expression -> . STRING1
    (33) expression -> . STRING2
    (45) expression -> . ID LPAREN statement RPAREN SEMICOLON

    NOT             shift and go to state 16
    TRUE            shift and go to state 5
    FALSE           shift and go to state 15
    MINUS           shift and go to state 6
    PLUS            shift and go to state 8
    LPAREN          shift and go to state 12
    SELECTOR        shift and go to state 3
    NUMBER          shift and go to state 2
    ID              shift and go to state 19
    STRING1         shift and go to state 11
    STRING2         shift and go to state 10

    expression                     shift and go to state 24

state 13

    (5) statement -> ID . ASSIGN expression SEMICOLON
    (41) statement -> ID . ASSIGN LBRACKET elements RBRACKET SEMICOLON
    (31) expression -> ID .
    (45) expression -> ID . LPAREN statement RPAREN SEMICOLON

  ! shift/reduce conflict for LPAREN resolved as shift
    ASSIGN          shift and go to state 25
    PLUS            reduce using rule 31 (expression -> ID .)
    MINUS           reduce using rule 31 (expression -> ID .)
    MULTIPLY        reduce using rule 31 (expression -> ID .)
    DIVIDE          reduce using rule 31 (expression -> ID .)
    POW             reduce using rule 31 (expression -> ID .)
    MOD             reduce using rule 31 (expression -> ID .)
    AND             reduce using rule 31 (expression -> ID .)
    OR              reduce using rule 31 (expression -> ID .)
    XOR             reduce using rule 31 (expression -> ID .)
    EQUALS          reduce using rule 31 (expression -> ID .)
    NOT_EQUALS      reduce using rule 31 (expression -> ID .)
    GREATER_THAN    reduce using rule 31 (expression -> ID .)
    LESS_THAN       reduce using rule 31 (expression -> ID .)
    GREATER_THAN_OR_EQUAL reduce using rule 31 (expression -> ID .)
    LESS_THAN_OR_EQUAL reduce using rule 31 (expression -> ID .)
    ID              reduce using rule 31 (expression -> ID .)
    IF              reduce using rule 31 (expression -> ID .)
    WHILE           reduce using rule 31 (expression -> ID .)
    NOT             reduce using rule 31 (expression -> ID .)
    TRUE            reduce using rule 31 (expression -> ID .)
    FALSE           reduce using rule 31 (expression -> ID .)
    SELECTOR        reduce using rule 31 (expression -> ID .)
    NUMBER          reduce using rule 31 (expression -> ID .)
    STRING1         reduce using rule 31 (expression -> ID .)
    STRING2         reduce using rule 31 (expression -> ID .)
    $end            reduce using rule 31 (expression -> ID .)
    END             reduce using rule 31 (expression -> ID .)
    ELIF            reduce using rule 31 (expression -> ID .)
    ELSE            reduce using rule 31 (expression -> ID .)
    RPAREN          reduce using rule 31 (expression -> ID .)
    LPAREN          shift and go to state 26

  ! LPAREN          [ reduce using rule 31 (expression -> ID .) ]


state 14

    (34) statement -> IF . expression DO statements elif_blocks END
    (8) expression -> . expression PLUS expression
    (9) expression -> . expression MINUS expression
    (10) expression -> . expression MULTIPLY expression
    (11) expression -> . expression DIVIDE expression
    (12) expression -> . expression POW expression
    (13) expression -> . expression MOD expression
    (14) expression -> . expression AND expression
    (15) expression -> . expression OR expression
    (16) expression -> . expression XOR expression
    (17) expression -> . expression EQUALS expression
    (18) expression -> . expression NOT_EQUALS expression
    (19) expression -> . expression GREATER_THAN expression
    (20) expression -> . expression LESS_THAN expression
    (21) expression -> . expression GREATER_THAN_OR_EQUAL expression
    (22) expression -> . expression LESS_THAN_OR_EQUAL expression
    (23) expression -> . NOT expression
    (24) expression -> . TRUE
    (25) expression -> . FALSE
    (26) expression -> . MINUS expression
    (27) expression -> . PLUS expression
    (28) expression -> . LPAREN expression RPAREN
    (29) expression -> . SELECTOR LPAREN elements RPAREN
    (30) expression -> . NUMBER
    (31) expression -> . ID
    (32) expression -> . STRING1
    (33) expression -> . STRING2
    (45) expression -> . ID LPAREN statement RPAREN SEMICOLON

    NOT             shift and go to state 16
    TRUE            shift and go to state 5
    FALSE           shift and go to state 15
    MINUS           shift and go to state 6
    PLUS            shift and go to state 8
    LPAREN          shift and go to state 12
    SELECTOR        shift and go to state 3
    NUMBER          shift and go to state 2
    ID              shift and go to state 19
    STRING1         shift and go to state 11
    STRING2         shift and go to state 10

    expression                     shift and go to state 27

state 15

    (25) expression -> FALSE .

    PLUS            reduce using rule 25 (expression -> FALSE .)
    MINUS           reduce using rule 25 (expression -> FALSE .)
    MULTIPLY        reduce using rule 25 (expression -> FALSE .)
    DIVIDE          reduce using rule 25 (expression -> FALSE .)
    POW             reduce using rule 25 (expression -> FALSE .)
    MOD             reduce using rule 25 (expression -> FALSE .)
    AND             reduce using rule 25 (expression -> FALSE .)
    OR              reduce using rule 25 (expression -> FALSE .)
    XOR             reduce using rule 25 (expression -> FALSE .)
    EQUALS          reduce using rule 25 (expression -> FALSE .)
    NOT_EQUALS      reduce using rule 25 (expression -> FALSE .)
    GREATER_THAN    reduce using rule 25 (expression -> FALSE .)
    LESS_THAN       reduce using rule 25 (expression -> FALSE .)
    GREATER_THAN_OR_EQUAL reduce using rule 25 (expression -> FALSE .)
    LESS_THAN_OR_EQUAL reduce using rule 25 (expression -> FALSE .)
    ID              reduce using rule 25 (expression -> FALSE .)
    IF              reduce using rule 25 (expression -> FALSE .)
    WHILE           reduce using rule 25 (expression -> FALSE .)
    NOT             reduce using rule 25 (expression -> FALSE .)
    TRUE            reduce using rule 25 (expression -> FALSE .)
    FALSE           reduce using rule 25 (expression -> FALSE .)
    LPAREN          reduce using rule 25 (expression -> FALSE .)
    SELECTOR        reduce using rule 25 (expression -> FALSE .)
    NUMBER          reduce using rule 25 (expression -> FALSE .)
    STRING1         reduce using rule 25 (expression -> FALSE .)
    STRING2         reduce using rule 25 (expression -> FALSE .)
    $end            reduce using rule 25 (expression -> FALSE .)
    DO              reduce using rule 25 (expression -> FALSE .)
    END             reduce using rule 25 (expression -> FALSE .)
    ELIF            reduce using rule 25 (expression -> FALSE .)
    ELSE            reduce using rule 25 (expression -> FALSE .)
    RPAREN          reduce using rule 25 (expression -> FALSE .)
    COMMA           reduce using rule 25 (expression -> FALSE .)
    SEMICOLON       reduce using rule 25 (expression -> FALSE .)
    RBRACKET        reduce using rule 25 (expression -> FALSE .)


state 16

    (23) expression -> NOT . expression
    (8) expression -> . expression PLUS expression
    (9) expression -> . expression MINUS expression
    (10) expression -> . expression MULTIPLY expression
    (11) expression -> . expression DIVIDE expression
    (12) expression -> . expression POW expression
    (13) expression -> . expression MOD expression
    (14) expression -> . expression AND expression
    (15) expression -> . expression OR expression
    (16) expression -> . expression XOR expression
    (17) expression -> . expression EQUALS expression
    (18) expression -> . expression NOT_EQUALS expression
    (19) expression -> . expression GREATER_THAN expression
    (20) expression -> . expression LESS_THAN expression
    (21) expression -> . expression GREATER_THAN_OR_EQUAL expression
    (22) expression -> . expression LESS_THAN_OR_EQUAL expression
    (23) expression -> . NOT expression
    (24) expression -> . TRUE
    (25) expression -> . FALSE
    (26) expression -> . MINUS expression
    (27) expression -> . PLUS expression
    (28) expression -> . LPAREN expression RPAREN
    (29) expression -> . SELECTOR LPAREN elements RPAREN
    (30) expression -> . NUMBER
    (31) expression -> . ID
    (32) expression -> . STRING1
    (33) expression -> . STRING2
    (45) expression -> . ID LPAREN statement RPAREN SEMICOLON

    NOT             shift and go to state 16
    TRUE            shift and go to state 5
    FALSE           shift and go to state 15
    MINUS           shift and go to state 6
    PLUS            shift and go to state 8
    LPAREN          shift and go to state 12
    SELECTOR        shift and go to state 3
    NUMBER          shift and go to state 2
    ID              shift and go to state 19
    STRING1         shift and go to state 11
    STRING2         shift and go to state 10

    expression                     shift and go to state 28

state 17

    (4) statement -> expression .
    (6) statement -> expression . PLUS PLUS SEMICOLON
    (7) statement -> expression . MINUS MINUS SEMICOLON
    (8) expression -> expression . PLUS expression
    (9) expression -> expression . MINUS expression
    (10) expression -> expression . MULTIPLY expression
    (11) expression -> expression . DIVIDE expression
    (12) expression -> expression . POW expression
    (13) expression -> expression . MOD expression
    (14) expression -> expression . AND expression
    (15) expression -> expression . OR expression
    (16) expression -> expression . XOR expression
    (17) expression -> expression . EQUALS expression
    (18) expression -> expression . NOT_EQUALS expression
    (19) expression -> expression . GREATER_THAN expression
    (20) expression -> expression . LESS_THAN expression
    (21) expression -> expression . GREATER_THAN_OR_EQUAL expression
    (22) expression -> expression . LESS_THAN_OR_EQUAL expression
